清理无用的代码

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form id="login" action="/spring_security_check"  method="post">
+    <form id="login" action="/login"  method="post">
         <table>
             <tr>
                 <td>用户名</td>
